# Ecommerce-Website-Prime-Connect

./: README.md  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
backend/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  utils.py
core/migrations/: 0001_initial.py  0002_remove_orderitem__id_remove_shippingaddress__id_and_more.py  0003_alter_product_image1.py  0004_alter_product_discount_alter_product_hasdiscount.py  0005_alter_product_hasdiscount.py  0006_remove_product_hasdiscount.py  0007_product_hasdiscount.py  0008_remove_product_numreviews.py  0009_alter_review_rating.py  0010_alter_order_paymentmethod.py  0011_alter_product_user.py  0012_message.py  0013_alter_customuser_options_message_is_read.py  0014_adminmessage_remove_message_createdat_and_more.py  0015_message_body_message_date_message_is_read_and_more.py  0016_remove_message_body_remove_message_date_and_more.py  0017_orderitem_datecreated.py  0018_alter_category_options_alter_orderitem_options_and_more.py
staticfiles/: asset-manifest.226a637a93e5.json  asset-manifest.226a637a93e5.json.br  asset-manifest.337c7a44ffc5.json  asset-manifest.729948691ee4.json  asset-manifest.729948691ee4.json.br  asset-manifest.8cff0ad8da0a.json  asset-manifest.8cff0ad8da0a.json.br  asset-manifest.json.br  favicon.fab6dfb136ce.ico.br  index.52cb56865e3b.html.br  index.7ce6b5fa9a5a.html  index.7ce6b5fa9a5a.html.br  index.c955dbd6faba.html.br  index.d816399dede5.html.br  index.html  index.html.br  manifest.073f21b3431a.json.br  serviceWorker.6896dad45e85.js.br  staticfiles.json
(+268 files in other folders)
